--- a/IceCreamShopCSharp/IceCreamShopCSharp/IceCreamShopCSharp.csproj
+++ b/IceCreamShopCSharp/IceCreamShopCSharp/IceCreamShopCSharp.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataLayer\IProduct.cs" />
     <Compile Include="Pages\Sub\AddProduct.cs">
       <SubType>Form</SubType>
     </Compile>
